# data-quality-etl

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: hello_world.py
docs/: index.md
tests/: test_hello_word.py
