[tool.poetry]
name = "data-quality"
version = "0.1.0"
description = ""
authors = ["Vinicius Marotti <vinicius.marotti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.3"
mkdocs-material = "^9.6.23"
mkdocstrings = "^0.30.1"
taskipy = "^1.14.1"
isort = "^7.0.0"
black = "^25.9.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"